@startuml
!theme plain
hide circle
skinparam entityStyle rectangle

' --- Entities ---
entity "Session" as Session {
  * id : uuid
  --
  fingerprint : varchar
  is_duplicate : bool
  self_reported_new : bool
  age_range : int
  gender : int
  country : varchar
  occupation : varchar
  driving_experience : int
  status : smallint
  expires_at : timestamp
  experiment_plan : jsonb
  feedback : jsonb
  created_at : timestamp
  updated_at : timestamp
}

entity "ContextTemplate" as ContextTemplate {
  * id : uuid
  --
  name : string
  width : int
  height : int
  grid_data : jsonb
  lane_config : jsonb
  meta : jsonb
  created_at : timestamp
  updated_at : timestamp
}

entity "Scenario" as Scenario {
  * id : uuid
  --
  context_template_id : uuid
  session_id : uuid
  entities : jsonb
  factors : jsonb
  dilemma_options : jsonb
  narrative : text
  trident_spawn : jsonb
  started_at : timestamp
  created_at : timestamp
  updated_at : timestamp
}

entity "Response" as Response {
  * id : uuid
  --
  scenario_id : uuid (unique)
  ranking_order : jsonb
  is_timeout : bool
  has_interacted : bool
  response_time_ms : int64
  created_at : timestamp
  updated_at : timestamp
}

' --- Relationships ---
Session ||--o{ Scenario : "has"
ContextTemplate ||--o{ Scenario : "template_of"
Scenario ||--|| Response : "has"
@enduml